# survey-data-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  responses.csv  rules.yaml
examples/sample_output/: cleaned.csv  cleaning_log.json  data_dictionary.csv  quality_report.md
src/survey_cleaner/: __init__.py  __main__.py  cleaning.py  cli.py  loaders.py  pipeline.py  profiles.py  reports.py  rules.py  schema.py  types_infer.py  validators.py
tests/: conftest.py  test_cleaning.py  test_cli.py  test_loaders.py  test_pipeline.py  test_profiles.py  test_reports.py  test_rules.py  test_schema.py  test_types_infer.py  test_validators.py
