[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-data-cleaner"
version = "0.1.0"
description = "Clean messy survey CSV/XLSX exports into analysis-ready tables with a reproducible cleaning report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "doc-parihar" }]
keywords = [
    "survey",
    "data-cleaning",
    "csv",
    "xlsx",
    "google-forms",
    "redcap",
    "data-dictionary",
    "cli",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
]
dependencies = [
    "pandas>=1.5",
    "openpyxl>=3.0",
    "pyyaml>=5.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
survey-clean = "survey_cleaner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
